--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#C21460</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="color_light">#FBDFE6</color>
+    <color name="color_light_darkest">#EC6988</color>
+    <color name="color_primary">#D61A46</color>
+    <color name="color_primary_dark">#7B0F28</color>
+    <color name="color_primary_darkest">#340913</color>
+
 </resources>
