--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -40,7 +40,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_title_logo1" />
+            app:srcCompat="@drawable/ic_title_logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
