--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,7 +21,9 @@
         tools:layout="@layout/fragment_obstacle" >
         <action
             android:id="@+id/action_obstacleFragment_to_canceledFragment"
-            app:destination="@id/canceledFragment" />
+            app:destination="@id/canceledFragment"
+            app:popUpTo="@id/obstacleFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_obstacleFragment_to_userDataFragment"
             app:destination="@id/userDataFragment" />
@@ -30,11 +32,21 @@
         android:id="@+id/canceledFragment"
         android:name="com.example.prijavazavakcinaciju.CanceledFragment"
         android:label="CanceledFragment"
-        tools:layout="@layout/fragment_canceled" />
+        tools:layout="@layout/fragment_canceled" >
+        <action
+            android:id="@+id/action_canceledFragment_to_titleFragment"
+            app:destination="@id/titleFragment" />
+    </fragment>
     <fragment
         android:id="@+id/userDataFragment"
         android:name="com.example.prijavazavakcinaciju.UserDataFragment"
         android:label="UserDataFragment"
         tools:layout="@layout/fragment_user_data"
+        />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.prijavazavakcinaciju.AboutFragment"
+        android:label="AboutFragment"
+        tools:layout="@layout/fragment_about"
         />
 </navigation>
