--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -44,8 +44,8 @@
         tools:layout="@layout/fragment_user_data"
         >
         <action
-            android:id="@+id/action_userDataFragment_to_priorityFragment"
-            app:destination="@id/priorityFragment" />
+            android:id="@+id/action_userDataFragment_to_priorityGroupFragment"
+            app:destination="@id/priorityGroupFragment" />
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
@@ -54,8 +54,9 @@
         tools:layout="@layout/fragment_about"
         />
     <fragment
-        android:id="@+id/priorityFragment"
-        android:name="com.example.prijavazavakcinaciju.PriorityFragment"
-        android:label="fragment_priority"
-        tools:layout="@layout/fragment_priority" />
+        android:id="@+id/priorityGroupFragment"
+        android:name="com.example.prijavazavakcinaciju.PriorityGroupFragment"
+        android:label="PriorityGroupFragment"
+        tools:layout="@layout/fragment_priority_group"
+        />
 </navigation>
