--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -10,29 +10,128 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/tv_data"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="sans-serif"
+            android:text="Podaci o osobi"
+            android:textSize="@dimen/title"
+            android:textStyle="bold"
+            android:typeface="normal"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
-            android:id="@+id/tv_first_name"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_first_last_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="First Name"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:drawablePadding="12dp"
+            android:textSize="@dimen/summary_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.226" />
+            app:layout_constraintTop_toBottomOf="@id/tv_data"
+            app:layout_constraintVertical_bias="0.091"
+            tools:text="First and Last Name"
+            app:drawableStartCompat="@drawable/ic_person_pin" />
 
         <TextView
-            android:id="@+id/tv_last_name"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_age"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Last Name"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="24dp"
+            android:drawablePadding="12dp"
+            android:textSize="@dimen/summary_text_size"
+            app:drawableStartCompat="@drawable/ic_age"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_first_last_name"
+            tools:text="Age" />
+
+        <TextView
+            android:id="@+id/tv_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="12dp"
+            android:textSize="@dimen/summary_text_size"
+            app:drawableStartCompat="@drawable/ic_phone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_age"
+            tools:text="Phone" />
+
+        <TextView
+            android:id="@+id/tv_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="24dp"
+            android:drawablePadding="12dp"
+            android:textSize="@dimen/summary_text_size"
+            app:drawableStartCompat="@drawable/ic_email"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
-            app:layout_constraintVertical_bias="0.127" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_phone"
+            app:layout_constraintVertical_bias="0"
+            tools:text="Email" />
+
+        <TextView
+            android:id="@+id/tv_priority"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="24dp"
+            android:drawablePadding="12dp"
+            android:textSize="@dimen/summary_text_size"
+            app:drawableStartCompat="@drawable/ic_priority"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_email"
+            app:layout_constraintVertical_bias="0"
+            tools:text="Priority" />
+
+        <TextView
+            android:id="@+id/tv_vaccine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="24dp"
+            android:drawablePadding="12dp"
+            app:drawableStartCompat="@drawable/ic_vaccine"
+            android:textSize="@dimen/summary_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_priority"
+            app:layout_constraintVertical_bias="0"
+            tools:text="Vaccine" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
