added-appointment-fr

--- a/app/src/main/res/layout/fragment_canceled.xml
+++ b/app/src/main/res/layout/fragment_canceled.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,7 +21,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_canceled_img" />
+                app:srcCompat="@drawable/ic_canceled_img"
+                android:contentDescription="@string/corona_img" />
 
             <TextView
                 android:id="@+id/rulesText"
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="120dp"
-                android:text="Početna"
+                android:text="@string/home"
                 android:textSize="@dimen/button_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
