--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -50,7 +50,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/id_main_title"
-            app:srcCompat="@drawable/ic_title_logo" />
+            app:srcCompat="@drawable/ic_title_logo"
+            android:contentDescription="@string/title_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
