--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="92dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:hint="Ime"
+            android:hint="@string/ime"
             android:drawableStart="@drawable/ic_person"
             android:drawablePadding="12dp"
             android:inputType="text"
@@ -38,7 +38,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:hint="Email"
+            android:hint="@string/email"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="12dp"
             android:inputType="textEmailAddress"
@@ -58,7 +58,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:hint="Prezime"
+            android:hint="@string/prezime"
             android:drawableStart="@drawable/ic_last_name"
             android:drawablePadding="12dp"
             android:textColor="#120B0B"
@@ -77,7 +77,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:hint="Godine"
+            android:hint="@string/godine"
             android:drawablePadding="12dp"
             android:drawableStart="@drawable/ic_age"
             android:inputType="number"
@@ -97,7 +97,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:hint="Telefon"
+            android:hint="@string/telefon"
             android:drawablePadding="12dp"
             android:drawableStart="@drawable/ic_phone"
             android:inputType="phone"
@@ -118,7 +118,7 @@
             android:layout_marginEnd="148dp"
             android:layout_marginRight="148dp"
             android:gravity="center"
-            android:text="Podaci o korisniku"
+            android:text="@string/podaci_o_korisniku"
             android:textSize="@dimen/title"
             android:textStyle="bold"
             android:typeface="normal"
