--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -14,11 +14,12 @@
             android:id="@+id/id_main_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
             android:text="@string/prijava_za_vakcinaciju"
+            android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
             android:typeface="normal"
-            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/titleImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
