--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -139,5 +139,9 @@
         android:id="@+id/appointmentFragment"
         android:name="com.example.prijavazavakcinaciju.AppointmentFragment"
         android:label="AppointmentFragment"
-        tools:layout="@layout/fragment_appointment"/>
+        tools:layout="@layout/fragment_appointment">
+        <argument
+            android:name="priority"
+            app:argType="string" />
+    </fragment>
 </navigation>
